# flow-matching-fewstep

./: .gitignore  AI_USAGE.md  LICENSE  README.md  pyproject.toml  requirements.txt
figures/: README.md  fid.json
figures/fashion/: fid.json
figures/mnist/: fid.json
fmfs/: inference.py
fmfs/data/: __init__.py  datasets.py
fmfs/flow/: __init__.py  ddpm.py  rectified_flow.py
fmfs/metrics/: __init__.py  classifier_fid.py  mnist_fid.py
fmfs/utils/: __init__.py  plotting.py  seed.py
notebooks/: 01_demo.ipynb  02_results.ipynb  03_walkthrough.ipynb
report/: REPORT.md
results/: mnist_clf.pt
scripts/: compare_datasets.py  eval_fid.py  reflow.py  sample.py  train.py
src/: config.py  inference.py
src/flow/: __init__.py  rectified_flow.py
src/metrics/: fid.py  mnist_fid.py
src/models/: unet.py
src/utils/: __init__.py  ema.py  plotting.py
tests/: test_basic.py
