[project]
name = "flow-matching-fewstep"
version = "0.1.0"
description = "Few-step image generation: Flow Matching / Rectified Flow vs. DDPM"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "pytorch-fid>=0.3.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
